yaml/admission.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: webhook
  namespace: kube-system
webhooks:
  - name: webhook.kube-system.svc
    namespaceSelector:
      matchExpressions:
        - key: type
          operator: In
          values: [ "tenant" ]
    rules:
      - operations: [ "CREATE","UPDATE" ]
        apiGroups: [ "apps" ]
        apiVersions: [ "v1" ]
        resources: [ "deployments" ]
    admissionReviewVersions: [ "v1","v1bate1" ]
    clientConfig:
      caBundle: |
        LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURNVENDQWhtZ0F3SUJBZ0lVSDBtQk9lV1dt
[...]
        PQotLS0tLUVORCBDRVJUSUZJQ0FURS0tLS0tCg==
      service:
        name: webhook
        namespace: kube-system
        path: /deployments
    sideEffects: NoneOnDryRun
    failurePolicy: Fail
